--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -11,25 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <android.support.design.widget.TextInputLayout
+        <EditText
+            android:id="@+id/title_create"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/title_create"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/title"
-                android:textColor="@android:color/black" />
-
-        </android.support.design.widget.TextInputLayout>
+            android:layout_height="wrap_content"
+            android:hint="Title"
+            android:textColor="@android:color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:orientation="horizontal">
-
             <EditText
                 android:id="@+id/time_create"
                 android:layout_width="0dp"
@@ -39,7 +31,6 @@
                 android:textSize="14sp"
                 android:clickable="true"
                 android:focusable="false"/>
-
             <EditText
                 android:id="@+id/author_create"
                 android:layout_width="0dp"
@@ -58,44 +49,19 @@
             android:layout_height="250dp"
             android:src="@mipmap/ic_launcher_round"
             tools:ignore="ContentDescription" />
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.design.widget.TextInputEditText
+            <EditText
                 android:id="@+id/bodyImgDescription_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/image_description"
                 android:textAppearance="@android:style/TextAppearance.Material.Small" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.design.widget.TextInputEditText
+            <EditText
                 android:id="@+id/content_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/content"
                 android:textColor="@android:color/black" />
-        </android.support.design.widget.TextInputLayout>
 
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/upload_fat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_gravity="end|bottom"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_action_upload"
-            app:backgroundTint="@android:color/holo_red_light"
-            app:fabSize="normal" />
     </LinearLayout>
 
 
