--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,7 +5,8 @@
         android:id="@+id/app_bar_search"
         app:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search" />
+        android:title="Search"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/action_contact"
         android:orderInCategory="100"
